examples/force-app/objects/Shopping_List__c/fields/Recipe_Idea__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Idea__c</fullName>
    <label>Recipe Idea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>