examples/force-app/objects/Shopping_List__c/fields/Total_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Products__c</fullName>
    <label>Total Products</label>
    <summarizedField>Allergy_Analysis__c.Price__c</summarizedField>
    <summaryForeignKey>Allergy_Analysis__c.Shopping_List__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>